--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -1,4 +1,5 @@
 .information{
+
     display:flex;
     flex-direction: column;
     mix-blend-mode: normal;
@@ -23,15 +24,14 @@
   .desktop-root{
     margin-top: 3rem;
     margin-bottom: 5rem;
-    width: 1440px;
+    width: 100%;
     height: 1024px;
     mix-blend-mode: normal;
     background-color: #ffffff;
     display: flex;
     border: 1px solid black;
     overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
+  
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -43,7 +43,7 @@
     justify-content: flex-start;
     gap: 40px;
     align-items: center;
-    margin: 0px 38px 0px 0px;
+    margin: 0px 23px 0px 0px;
   }
   .first-box{
     height: 84px;
@@ -108,7 +108,7 @@
     margin: 0px 9px 0px 0px;
   }
   .first-row{
-    width: 1340px;
+    width: 100%;
     mix-blend-mode: normal;
     background-image: linear-gradient(
       180deg,
@@ -119,14 +119,14 @@
     position: absolute;
     flex-direction: row;
     justify-content: center;
-    padding: 0px 50px 261px 50px;
+    padding: 0px 50px 261px 0px;
   }
   .first-img{
     width: 110px;
     height: 84px;
     mix-blend-mode: normal;
     position: absolute;
-    left: 23px;
+   
   }
   .text1{
     mix-blend-mode: normal;
@@ -135,7 +135,7 @@
     font-weight: 700;
     position: absolute;
     top: 22px;
-    left: 121px;
+    left: 100px;
   }
   
   .first-img1{
@@ -164,7 +164,7 @@
     height: 250px;
     mix-blend-mode: normal;
     align-self: flex-end;
-    margin: 0px 8px 0px 0px;
+    margin: 0px 23px 0px 0px;
   }
   
   .text3{
@@ -187,10 +187,10 @@
   .main{
     height: 801px;
     position: relative;
-    min-width: 1440px;
+    min-width: 100%;
   }
   .upper-nav{
-    width: 1440px;
+    width: 100%;
     height: 80px;
     mix-blend-mode: normal;
     background-color: rgba(255, 156, 9, 0.8);
@@ -201,7 +201,7 @@
     display: flex;
     font-size: 16px;
     font-family: Hind;
-    width: 1440px;
+    width: 100%;
     height: 26px;
     background-color: #f8d5a1;
     flex-direction: row;
@@ -218,7 +218,7 @@
     background-color: #ffffff;
     position: absolute;
     top: 444px;
-    left: 150px;
+    left: 180px;
     border-radius: 20px;
     border-width: 1px;
   }
@@ -240,7 +240,7 @@
     font-weight: 700;
     position: absolute;
     top: 291px;
-    left: 808px;
+    left: 820px;
   }
   .text5{
     mix-blend-mode: normal;
@@ -298,7 +298,7 @@
     font-weight: 700;
     position: absolute;
     top: 127px;
-    left: 822px;
+    left: 838px;
   }
   .text10{
     mix-blend-mode: normal;
@@ -358,7 +358,7 @@
     mix-blend-mode: normal;
     position: absolute;
     top: 45px;
-    left: 813px;
+    left: 828px;
   }
   .Suitcase{
     width: 60px;
@@ -398,7 +398,7 @@
     mix-blend-mode: normal;
     position: absolute;
     top: 220px;
-    left: 813px;
+    left: 835px;
   }
   .Horoscope{
     width: 60px;
