--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -1,31 +1,37 @@
-.information{
-
-    display:flex;
-    flex-direction: column;
-    mix-blend-mode: normal;
-    font-size: 16px;
-    font-family: Hind;
-    font-weight: 700;
-    
-  }
-  .personal-detail{
-    margin-left: 10px;
-  }
-  
-  .initials{
-    display: flex;
-    flex-direction: row;
-    font-size: 16px;
-    font-family: Hind;
-    font-weight: 700;
+.first-column-description{
+  gap: 57px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+.description-values{
+  font-size: 16px;
+  font-weight: 700;
+  font-family: Hind;
+  white-space: nowrap;
+}
+.description-values-initials{
+  display: contents;
+  font-size: 16px;
+  font-weight: 700;
+  font-family: Hind;
+}
+  .description-values-results{
     display: contents;
+    font-size: 16px;
+    font-family: Hind;
+    white-space: pre-wrap;
   }
-  
+  .first-column-image{
+    width: 100px;
+  height: 100px;
+  align-self: flex-start;
+  }
   .desktop-root{
-    margin-top: 3rem;
-    margin-bottom: 5rem;
+   
     width: 100%;
-    height: 1024px;
+    height: 924px;
     mix-blend-mode: normal;
     background-color: #ffffff;
     display: flex;
@@ -71,10 +77,14 @@
     padding: 14px 23px 14px 21px;
     border-width: 5px;
   }
+  .first-column-heading{
+    display: flex;
+  align-items: center;
+  }
   .logo{
     height: 84px;
-    position: relative;
-    min-width: 421px;
+   
+
   }
   .row1{
     display: flex;
@@ -142,16 +152,15 @@
     width: 110px;
     height: 85px;
     mix-blend-mode: normal;
-    position: absolute;
+   
   }
   .text2{
-    mix-blend-mode: normal;
     font-size: 22px;
     font-family: Hind;
     font-weight: 700;
-    position: absolute;
-    top: 23px;
-    left: 95px;
+   text-align: center;
+   justify-content: center;
+   
   }
   .first-img2{
     width: 100px;
