--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -2,8 +2,9 @@
   gap: 57px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content:center;
   align-items: center;
+  margin-left: 10px;
 }
 .description-values{
   font-size: 16px;
@@ -31,7 +32,7 @@
   .desktop-root{
    
     width: 100%;
-    height: 924px;
+    height: 930px;
     mix-blend-mode: normal;
     background-color: #ffffff;
     display: flex;
@@ -227,7 +228,10 @@
     background-color: #ffffff;
     position: absolute;
     top: 444px;
-    left: 180px;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
     border-radius: 20px;
     border-width: 1px;
   }
