--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -183,7 +183,7 @@ justify-content: center;
     height: 29rem;
   }
   .white-block{
-    margin-top: 13rem;
+    margin-top:;
   }
  
   .first1-img3{
@@ -198,7 +198,10 @@ justify-content: center;
     gap: 80px;
   }
   .Crousel-Item{
-    height: 750px;
+    height: 780px;
+  }
+  .white-block{
+    margin-top: 14rem;
   }
 
 }
@@ -218,6 +221,9 @@ justify-content: center;
   .first-column-heading1{
     gap: 70px;
   }
+  .white-block{
+    margin-top: 12rem;
+  }
   
 }
 @media (max-width:770px) {
@@ -236,7 +242,9 @@ justify-content: center;
   .first-column-heading1{
     gap: 60px;
   }
-  
+  .white-block{
+    margin-top: 10rem;
+  }
 }
 @media (max-width:710px) {
   .first1-img5{
@@ -262,6 +270,9 @@ justify-content: center;
   }
   .first-column-heading1{
     gap: 55px;
+  }
+  .white-block{
+    margin-top: 8rem;
   }
 .Crousel-Item{height: 900px;}
 
@@ -294,6 +305,9 @@ justify-content: center;
 .first1-img1{
   padding-right: 20px;
 }
+.white-block{
+  margin-top: 6rem;
+}
 }
 @media (max-width:570px) {
   .first1-img5{
@@ -324,6 +338,9 @@ justify-content: center;
 .first-column-heading1{
   gap:40px;
 }
+.white-block{
+  margin-top: 5rem;
+}
 }
 @media (max-width:500px) {
   .first1-img5{
@@ -334,6 +351,7 @@ justify-content: center;
     width: 26rem;
     height: 17rem;
   }
+
   .c1olumn1{
     width: 26rem;
     height: 17rem;
@@ -350,6 +368,9 @@ justify-content: center;
   .first1-column-image{
     width: 110px;
     height: 110px;
+  }
+  .white-block{
+    margin-top: 2rem;
   }
 
 .first-column-heading1{
@@ -369,14 +390,15 @@ justify-content: center;
     width: 22rem;
     height: 15rem;
   }
+
   .t1ext2{
     font-size: 13px;
   }
   .description-values-initials1{
-    font-size: 13px;
+    font-size: 12px;
   }
   .description-values-results1{
-    font-size: 13px;
+    font-size: 12px;
   }
   .first1-column-image{
     width: 90px;
@@ -405,11 +427,12 @@ justify-content: center;
     width: 19rem;
     height: 14rem;
   }
+ 
   .t1ext2{
     font-size: 13px;
   }
   .description-values-initials1{
-    font-size: 11px;
+    font-size: 9px;
   }
   .description-values-results1{
     font-size: 9px;
@@ -1009,14 +1032,14 @@ justify-content: center;
     }
     @media (max-width:1024px) {
 
-      .first-img5{
-        width:300px;
-      }
-      .first-img3{
-        width: 300px
-      }
-      .column1{
-        width: 300px;
+    .first-img5{
+      width:300px;
+    }
+    .first-img3{
+      width: 300px
+    }
+    .column1{
+      width: 300px;
     }
     .first-img1{
       height: 75px;
@@ -1025,6 +1048,13 @@ justify-content: center;
     .text2{
       font-size: 15px;
     }
+    .description-values-initials{
+      font-size: 11px;
+    }
+    .description-values-results{
+      font-size: 11px;
+    }
+   
   }
   @media (max-width:980px) {
 
@@ -1396,22 +1426,7 @@ justify-content: center;
     height: 1210px;
 
     }}
-    @media (max-width:1024px) {
-      .first-img5{
-        width: 50rem;
-        height: 29rem;
-      }
-     
-     
-      .first-img3{
-        width: 46rem;
-        height: 29rem;
-      }
-      .column1{
-        width: 46rem;
-        height: 29rem;
-      }
-    }
+
     @media (max-width:1000px) {
       .header-section{
         gap:40%
