--- a/src/Fourthpage/Fourthpage.css
+++ b/src/Fourthpage/Fourthpage.css
@@ -252,7 +252,7 @@ gap: 20px;
   position: absolute;
   width: 1px;
   top: 120px;
-  left: 647px;
+  left: 648px;
 }
 .fourthpage-line1{
   background-color: rgb(79, 66, 66);
@@ -260,7 +260,7 @@ gap: 20px;
   position: absolute;
   width: 1px;
   top: 120px;
-  left: 323.5px;
+  left: 324px;
 }
 .fourthpage-line4,.fourthpage-line5,.fourthpage-line6,.fourthpage-line7,.fourthpage-line8,.fourthpage-line9,.fourthpage-line10{
   background-color: rgb(79, 66, 66);
@@ -273,7 +273,7 @@ gap: 20px;
   display: none;
 }
 .fourthpage-line4{
-  top: 200px;
+  top: 201px;
  
 }
 .fourthpage-line5{
@@ -297,7 +297,7 @@ gap: 20px;
  
 }
 .fourthpage-line10{
-  top: 840px;
+  top: 841px;
 
 }
 .service1{
@@ -455,6 +455,12 @@ gap: 20px;
   @media (max-width:1330px) {
     .fourthpage-card-section-image{
       width: 545px;
+    }
+    .fourthpage-line1{
+      left:323px
+    }
+    .fourthpage-line2{
+      left:649px
     }
     .fourthpage-header-section{
       gap: 48%;
@@ -621,7 +627,7 @@ gap: 20px;
       display: block;
       position: absolute;
       width: 545px;
-      top: 1360px;
+      top: 1361px;
       left: 60px;
     }
     .fourthpage-line16{
