--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -659,6 +659,7 @@ justify-content: center;
       font-size: 16px;
       font-family: Hind;
       margin-bottom: 0px;
+      color: #000;
     }
     .first-img4{
       width: 7px;
