--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -1,3 +1,4 @@
+
 .Crousel-Item{
   display: none;
 }
@@ -1176,5 +1177,9 @@ position: absolute;
    
     .Crousel-firstpage-detail-options{
       width: 90px;
+    }
+    .copyright-block{
+    
+      font-size: 14px;
     }
   }
